--- a/srm.ini
+++ b/srm.ini
@@ -1,26 +1,26 @@
 [global]
 debug=1
-chroot=/home/svens/
-interface=tap-mess-1000-0
+chroot=/srm
+interface=eth0
 node=0
 hostip=172.16.1.1
 volumes=SYSTEMS;BOOT
 
 [SYSTEMS]
 volume=0
-path=mame/SRM/SYSTEMS
+path=SYSTEMS
 readonly=1
 
 [BOOT]
 volume=8
-path=mame/SRM/BOOT
+path=BOOT
 readonly=1
 
-[HOME]
+[HP340]
 volume=1
-path=/
+path=HP340
 
 [08:00:09:06:a1:f1]
-ip=172.16.1.3
-volumes=HOME
+ip=172.16.1.2
+volumes=HP340
 node=1
