update config file
Signed-off-by: Sven Schnelle <svens@stackframe.org>

--- a/srm.ini
+++ b/srm.ini
@@ -1,26 +1,50 @@
 [global]
+# mask of debug messages to enable
 debug=1
+
+# chroot to this path during server startup (all volume
+# paths are below this path)
 chroot=/srm
+
+# interface to listen on for srm requests
 interface=eth0
+
+# node of this server
 node=0
+
+# IP address of this server
 hostip=172.16.1.1
+
+# list of volumes available to all clients
 volumes=SYSTEMS;BOOT
+
+# accept clients who didn't send a SRM_CONNECT request?
+accept_unknown=1
+
+# list of clients in <ethernet address>=<ip address>
+# the ip address will be sent to the client in the SRM
+# connect response.
 08:00:09:06:a1:f1=172.16.1.2
 
+# volume configuration
 [SYSTEMS]
+# volume index
 volume=0
+
+# path on filesystem below chroot path above
 path=SYSTEMS
-readonly=1
 
 [BOOT]
 volume=8
 path=BOOT
-readonly=1
 
 [HP340]
 volume=1
 path=HP340
 
+# SRM client configuration
 [172.16.1.2]
+# list of volumes available in addition to global list
 volumes=HP340
+# SRM node ID of the client
 node=1
