uid/gid support
Signed-off-by: Sven Schnelle <svens@stackframe.org>

--- a/srm.ini
+++ b/srm.ini
@@ -31,6 +31,10 @@ accept_unknown=1
 # volume index
 volume=0
 
+# uid/git used on the server for accessing volume path
+uid=1000
+gid=1000
+
 # path on filesystem below chroot path above
 path=SYSTEMS
 
