config: rework volume config parsing
In the past the ini file volume entries where parsed when a client
connected. At the point the process already chroot'd, and resolving
user names/groups doesn't work. In order to be able to use user/group
names parse the configured volumes during startup before the process
chroots.

Signed-off-by: Sven Schnelle <svens@stackframe.org>

--- a/srm.ini
+++ b/srm.ini
@@ -32,8 +32,8 @@ accept_unknown=1
 volume=0
 
 # uid/git used on the server for accessing volume path
-uid=1000
-gid=1000
+uid=srm
+gid=srmusers
 
 # path on filesystem below chroot path above
 path=SYSTEMS
