split up sources and start to add rmp support
Signed-off-by: Sven Schnelle <svens@stackframe.org>

--- a/srm.ini
+++ b/srm.ini
@@ -52,3 +52,9 @@ path=HP340
 volumes=HP340
 # SRM node ID of the client
 node=1
+
+# volume where boot files reside
+bootvolume=BOOT:
+
+# visible bootfiles 
+bootfiles=SYSTEM_B64,SYSTEM_P,SYSINSTALL
