update example config

--- a/srm.ini
+++ b/srm.ini
@@ -16,7 +16,7 @@ node=0
 hostip=172.16.1.1
 
 # list of volumes available to all clients
-volumes=SYSTEMS;BOOT
+volumes=SYSTEMS;SRM
 
 # accept clients who didn't send a SRM_CONNECT request?
 accept_unknown=1
@@ -29,32 +29,38 @@ accept_unknown=1
 # volume configuration
 [SYSTEMS]
 # volume index
-volume=0
+volume=10
 
-# uid/git used on the server for accessing volume path
+# path on filesystem below chroot path above
+path=/SYSTEMS
+
+# permissions
+umask=027
+
+[SRM]
+volume=8
+path=/SRM
 uid=srm
 gid=srmusers
 
-# path on filesystem below chroot path above
-path=SYSTEMS
-
-[BOOT]
-volume=8
-path=BOOT
-
-[HP340]
-volume=1
-path=HP340
+[USER]
+volume=9
+path=/user
 
 # SRM client configuration
 [172.16.1.2]
 # list of volumes available in addition to global list
-volumes=HP340
+volumes=USER
+
 # SRM node ID of the client
+hostnode=0
 node=1
 
 # volume where boot files reside
-bootvolume=BOOT:
+bootpath=SRM:/SYSTEMS
 
 # visible bootfiles 
-bootfiles=SYSTEM_B64,SYSTEM_P,SYSINSTALL
+bootfiles=SYSTEM_P;SYSTEM_B64
+
+# map temp directory to /tmp
+tempdir = /tmp
