listen on multiple interfaces
Signed-off-by: Sven Schnelle <svens@stackframe.org>

--- a/srm.ini
+++ b/srm.ini
@@ -7,13 +7,10 @@ debug=1
 chroot=/srm
 
 # interface to listen on for srm requests
-interface=eth0
+interfaces=eth0
 
 # node of this server
 node=0
-
-# IP address of this server
-hostip=172.16.1.1
 
 # list of volumes available to all clients
 volumes=SYSTEMS;SRM
